--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -12,6 +12,12 @@
     transition: transform 0.3s ease-out;
 }
 
+.signature {
+    position: fixed;
+    bottom: 0;
+    color: #949292;
+}
+
 @media (min-width: 500px) {
     .SideDrawer {
         display: none;
